--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,29 +8,35 @@ on:
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+    - uses: shivammathur/setup-php@v2
       with:
         php-version: '8.2'
     - uses: actions/checkout@v4
+
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
     - name: Install Dependencies
       run: composer install
-    - name: Update Dependencies
-      run: composer update
-    - name: Generate key
+
+    - name: Generate Key
       run: php artisan key:generate
+
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
+
     - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
+
+    - name: Run Migrations
+      run: php artisan migrate 
+
+    - name: Execute Tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
