--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,6 +23,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
+    - name: Copy .env
+      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
     # Install Composer Dependencies
     - name: Install Composer Dependencies
