--- a/app.json
+++ b/app.json
@@ -1,10 +1,15 @@
 {
+    "scripts": {
+        "postinstall": "npm install && npm run build"
+    },
     "environments": {
         "test": {
-            "env": {
-                "APP_KEY": "base64:VYvQmFWyzrM0rOlzzD+TCizTUAtoDjT9FHhNDMVjECw=",
-                "APP_ENV": "testing",
-                "APP_DEBUG": "true"
+            "scripts": {
+                "test-setup": [
+                    "composer install",
+                    "npm install",
+                    "npm run build"
+                ]
             }
         }
     }
