--- a/app.json
+++ b/app.json
@@ -1,28 +1,49 @@
 {
-    "name": "Laravel",
-    "description": "Data collection tool",
+    "name": "Laravel App",
+    "description": "A Laravel application.",
+    "keywords": [
+        "laravel",
+        "php",
+        "backend"
+    ],
     "scripts": {
-        "test-setup": [
-            "composer install",
-            "npm install",
-            "npm run build",
-            "php artisan migrate "
-        ],
-        "test": "vendor/bin/phpunit"
+        "postdeploy": "php artisan migrate --force"
     },
     "env": {
-        "APP_ENV": "testing",
-        "APP_DEBUG": "true",
-        "DB_CONNECTION": "sqlite",
-        "DB_DATABASE": ":memory:"
+        "APP_KEY": {
+            "description": "Application encryption key",
+            "generator": "secret"
+        },
+        "APP_ENV": "production",
+        "DB_CONNECTION": "mysql"
     },
+    "formation": {
+        "web": {
+            "quantity": 1,
+            "size": "standard-1x"
+        }
+    },
+    "image": "heroku/php",
+
+    "buildpacks": [
+        {
+            "url": "heroku/php"
+        },
+        {
+            "url": "heroku/nodejs"
+        }
+    ],
     "environments": {
         "test": {
+            "scripts": {
+                "test-setup": "npm install && npm run build && composer install",
+                "test": "php artisan migrate --env=testing && vendor/bin/phpunit"
+            },
             "env": {
                 "APP_ENV": "testing",
-                "APP_DEBUG": "true",
                 "DB_CONNECTION": "sqlite",
-                "DB_DATABASE": ":memory:"
+                "DB_DATABASE": ":memory:",
+                "APP_KEY": "base64:9L/HrSFrkJoTtuRsYhoTYodX1KCRGPHnCCkkrhKrjbE="
             }
         }
     }
